# fluca

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  QUICK_START.md  README.md  THEORY_GUIDE.md
.claude/rules/: build.md  petsc-conventions.md  testing.md
.claude/skills/add-test/: SKILL.md
.claude/skills/add-tutorial/: SKILL.md
.claude/skills/golden-update/: SKILL.md
.claude/skills/petsc-class/: SKILL.md
.claude/skills/spatial-discretization/: SKILL.md
fluca/: CMakeLists.txt
fluca/app/: CMakeLists.txt  main.c  main.cpp
fluca/cmake/: FindCGNS.cmake  FindHDF5.cmake  FindPETSc.cmake  FlucaTestUtils.cmake  RunTest.cmake  RunTutorial.cmake
fluca/include/: flucafd.h  flucamap.h  flucamesh.h  flucameshcart.h  flucameshtypes.h  flucans.h  flucansbc.h  flucansfsm.h  flucaphys.h  flucasol.h  flucasys.h  flucaviewer.h
fluca/include/fluca/private/: flucafdimpl.h  flucaimpl.h  flucamapimpl.h  flucaviewer_cgns.h  flucaviewercgnsimpl.h  flucaviewerimpl.h  mesh_cart.h  mesh_cartesian.h  meshcartimpl.h  meshimpl.h  ns_fsm.h  nsfsmimpl.h  nsimpl.h  nslinearcnimpl.h  physimpl.h  physinsimpl.h  sol_fsm.h  solimpl.h  viewercgnsutils.h
fluca/include/impl/: cgnsviewerinfo.h  flucaimpl.h  flucamapimpl.h  meshimpl.h  solimpl.h  viewercgnsutils.h
fluca/src/: CMakeLists.txt
fluca/src/fd/: CMakeLists.txt
fluca/src/fd/impls/composition/: composition.c
fluca/src/fd/impls/derivative/: derivative.c
fluca/src/fd/impls/scale/: scale.c
fluca/src/fd/impls/secondordertvd/: secondordertvd.c  secondordertvdlimiter.c
fluca/src/fd/impls/sum/: sum.c
fluca/src/fd/interface/: fdapply.c  fdbasic.c  fdopts.c  fdpkg.c  fdreg.c
fluca/src/fd/utils/: fdutils.c
fluca/src/mesh/: CMakeLists.txt
fluca/src/mesh/impl/cart/: cart.c  cartcgns.c  cartvec.c
fluca/src/mesh/impl/cartesian/: cartesian.c  cartesian.h  cartesiancgns.c
fluca/src/mesh/interface/: meshbasic.c  meshopts.c  meshpkg.c  meshreg.c
fluca/src/ns/: CMakeLists.txt
fluca/src/ns/impl/fsm/: fsm.c  fsmcart.c  fsmcart2d.c  fsmcartcgns.c  fsmcartop2d.c  fsmsol.c
fluca/src/ns/impl/linearcn/: cnlinear.c  cnlinearcart2d.c  cnlinearcart3d.c
fluca/src/ns/interface/: nsbasic.c  nsbc.c  nscgns.c  nsmon.c  nsopts.c  nspkg.c  nsreg.c  nssol.c  nssolver.c
fluca/src/ns/utils/: cartdiscret.c  cartdiscret.h  nspcreg.c
fluca/src/ns/utils/abfpc/: abfpc.c
fluca/src/phys/: CMakeLists.txt
fluca/src/phys/impls/ins/: ins.c  insimpl.h  insops.c
fluca/src/phys/interface/: physbasic.c  physopts.c  physpkg.c  physreg.c
fluca/src/sol/: CMakeLists.txt
fluca/src/sol/impl/fsm/: fsm.c  fsm.h  fsmcgns.c
fluca/src/sol/interface/: solbasic.c  solcgns.c  solpkg.c  solreg.c
fluca/src/sys/: CMakeLists.txt  flucainit.c  flucapkg.c
fluca/src/sys/map/: map.c
fluca/src/sys/viewer/: cgns.c
fluca/src/viewer/: CMakeLists.txt
fluca/src/viewer/impl/flucacgns/: flucacgns.c
fluca/src/viewer/interface/: viewerbasic.c  viewerreg.c  viewervec.c
fluca/tests/: CMakeLists.txt
fluca/tests/cavity_flow/: CMakeLists.txt  cavity_flow.c  cavity_flow_2d.c  cavity_flow_3d.c
fluca/tests/fd/: CMakeLists.txt  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c  fdtest.h
fluca/tests/fd/output/: ex1_first_deriv.out  ex1_first_deriv_input_loc_elem_output_loc_left.out  ex1_first_deriv_input_loc_elem_output_loc_left_left_bc_neumann.out  ex1_first_deriv_input_loc_elem_output_loc_left_left_bc_none.out  ex1_first_deriv_input_loc_elem_output_loc_left_left_bc_periodic.out  ex1_first_deriv_input_loc_left_output_loc_left.out  ex1_first_deriv_input_loc_left_output_loc_left_left_bc_dirichlet.out  ex1_first_deriv_input_loc_left_output_loc_left_left_bc_none.out  ex1_first_deriv_input_loc_left_output_loc_left_left_bc_periodic.out  ex1_first_deriv_input_loc_left_output_loc_left_right_bc_dirichlet.out  ex1_first_deriv_input_loc_left_output_loc_left_right_bc_neumann.out  ex1_first_deriv_input_loc_left_output_loc_left_right_bc_none.out  ex1_first_deriv_input_loc_left_output_loc_left_right_bc_periodic.out  ex1_second_deriv.out  ex1_second_deriv_input_loc_left_output_loc_left_right_bc_periodic.out  ex1_second_deriv_left_bc_dirichlet.out  ex1_second_deriv_left_bc_none.out  ex1_second_deriv_refined.out  ex1_second_deriv_right_bc_neumann.out  ex1_second_deriv_right_bc_none.out  ex1_third_deriv_left_bc_periodic.out  ex1_third_deriv_right_bc_periodic.out  ex1_third_deriv_right_bc_periodic_stencil_width_1.out  ex2_all_first_deriv.out  ex2_all_first_deriv_input_loc_face_output_loc_elem.out  ex2_all_second_deriv.out  ex2_all_second_deriv_all_loc_down.out  ex2_all_second_deriv_all_loc_down_left.out  ex2_all_second_deriv_all_loc_down_left_bc_dirichlet.out  ex2_all_second_deriv_all_loc_down_left_left_bc_dirichlet_up_bc_neumann.out  ex2_all_second_deriv_back_bc_periodic.out  ex2_all_second_deriv_left_bc_none.out  ex2_all_second_deriv_up_bc_neumann.out  ex3_first_deriv_scale_const.out  ex3_first_deriv_scale_vector_1.out  ex3_first_deriv_scale_vector_2.out  ex3_first_deriv_scale_vector_input_loc_elem_output_loc_left.out  ex3_first_deriv_scale_vector_input_loc_elem_output_loc_left_left_bc_neumann.out  ex3_second_deriv_right_bc_dirichlet_scale_const.out  ex4_all_first_deriv_first_accuracy_right_boundary.out  (+19 more)
fluca/tests/phys/: CMakeLists.txt  ex1.c  ex2.c  ex3.c
fluca/tests/phys/output/: ex1_2d.out  ex1_2d_params.out  ex2_stokes_default.out  ex2_stokes_refined.out  ex3_beuler_default.out  ex3_beuler_refined.out
fluca/tests/taylor_green_vortex/: CMakeLists.txt  taylor_green_vortex.c
fluca/tutorials/: CMakeLists.txt
fluca/tutorials/fd/: CMakeLists.txt  ex1.c  ex2.c  ex3.c  ex4.c
fluca/tutorials/phys/: CMakeLists.txt  ex1.c  ex2.c
